change style link

--- a/view/adminhtml/templates/layout.phtml
+++ b/view/adminhtml/templates/layout.phtml
@@ -8,8 +8,8 @@ if (!($module = $block->getModule()))
 $settings = $block->getSettings();
 $params = $block->getParams();
 ?>
-<link  rel="stylesheet" type="text/css"  media="all" href="https://portal.bulkgate.com/<?php echo (defined('BULKGATE_DEV_MODE') ? 'dev' : 'dist'); ?>/css/bulkgate-woosms.css"/>
-<div id="woo-sms">
+<link  rel="stylesheet" type="text/css"  media="all" href="https://portal.bulkgate.com/<?php echo (defined('BULKGATE_DEV_MODE') ? 'dev' : 'dist'); ?>/css/bulkgate-magesms.css"/>
+<div id="mage-sms">
 	<nav>
 		<div class="container-fluid">
 			<div class="nav-wrapper">
