--- a/view/adminhtml/templates/layout.phtml
+++ b/view/adminhtml/templates/layout.phtml
@@ -15,7 +15,7 @@ $params = $block->getParams();
 			<div class="nav-wrapper">
 				<div id="brand-logo">
 					<a class="brand-logo hide-on-med-and-down" href="<?php echo Escape::url($block->getUrl('*/dashboard')); ?>">
-						<img alt="woosms" width="120" src="<?php echo Escape::url($module->getUrl('/images/products/ms.png')); ?>" />
+						<img alt="magesms" width="120" src="<?php echo Escape::url($module->getUrl('/images/products/ms.svg')); ?>" />
 					</a>
 				</div>
 				<ul class="controls">
