Change tabs to spaces and <?php echo to <?=

--- a/view/adminhtml/templates/layout.phtml
+++ b/view/adminhtml/templates/layout.phtml
@@ -4,88 +4,88 @@
 use BulkGate\Magesms\Extensions;
 
 if (!($module = $block->getModule()))
-	return;
+    return;
 $settings = $block->getSettings();
 $params = $block->getParams();
 ?>
-<link  rel="stylesheet" type="text/css"  media="all" href="https://portal.bulkgate.com/<?php echo (defined('BULKGATE_DEV_MODE') ? 'dev' : 'dist'); ?>/css/bulkgate-magesms.css"/>
+<link  rel="stylesheet" type="text/css"  media="all" href="https://portal.bulkgate.com/<?= (defined('BULKGATE_DEV_MODE') ? 'dev' : 'dist'); ?>/css/bulkgate-magesms.css"/>
 <div id="mage-sms">
-	<nav>
-		<div class="container-fluid">
-			<div class="nav-wrapper">
-				<div id="brand-logo">
-					<a class="brand-logo hide-on-med-and-down" href="<?php echo Extensions\Escape::url($block->getUrl('*/dashboard')); ?>">
-						<img alt="magesms" width="120" src="<?php echo Extensions\Escape::url($module->getUrl('/images/products/ms.svg')); ?>" />
-					</a>
-				</div>
-				<ul class="controls">
-					<span id="react-app-panel-admin-buttons"></span>
-					<span id="react-app-info"></span>
-				</ul>
-				<div class="nav-h1">
-					<span class="h1-divider"></span>
-					<h1 class="truncate"><?php echo Extensions\Escape::html($block->getTitle()) ?><span id="react-app-h1-sub"></span></h1>
-				</div>
-			</div>
-		</div>
-	</nav>
-	<div id="profile-tab"></div>
-	<div<?php if($block->getBox()): ?> class="module-box"<?php endif; ?>>
-		<div id="react-snack-root"></div>
-		<div id="react-app-root">
-			<div class="loader loading">
-				<div class="spinner"></div>
-				<p><?php echo Extensions\Escape::html(__('Loading content')); ?></p>
-			</div>
-		</div>
-		<div id="react-language-footer"></div>
-		<script type="application/javascript">
-			var _bg_client_config = {
-				url: {
-					authenticationService : '<?php echo $block->getUrl('*/index/ajax') ?>?isAjax=true'
-				},
-				actions: {
-					authenticate: function () {
-						return {
-							data: {
-								action: "authenticate",
-								form_key: "<?php echo $block->getFormKey(); ?>",
-								data: {}
-							}
-						}
-					}
-				}
-			};
-		</script>
-		<script src="<?php echo Extensions\Escape::url($module->getUrl('/'.(defined('BULKGATE_DEV_MODE') ? 'dev' : 'dist').'/widget-api/widget-api.js')); ?>"></script>
-		<script type="application/javascript">
-			_bg_client.registerMiddleware(function (data)
-			{
-				if(data.init._generic)
-				{
-					data.init.env.homepage.logo_link = "<?php echo Extensions\Escape::url($module->getUrl('/images/products/ms.png')); ?>";
-					data.init._generic.scope.module_info = <?php echo Extensions\Escape::js($module->info()); ?>;
-				}
-			});
+    <nav>
+        <div class="container-fluid">
+            <div class="nav-wrapper">
+                <div id="brand-logo">
+                    <a class="brand-logo hide-on-med-and-down" href="<?= Extensions\Escape::url($block->getUrl('*/dashboard')); ?>">
+                        <img alt="magesms" width="120" src="<?= Extensions\Escape::url($module->getUrl('/images/products/ms.svg')); ?>" />
+                    </a>
+                </div>
+                <ul class="controls">
+                    <span id="react-app-panel-admin-buttons"></span>
+                    <span id="react-app-info"></span>
+                </ul>
+                <div class="nav-h1">
+                    <span class="h1-divider"></span>
+                    <h1 class="truncate"><?= Extensions\Escape::html($block->getTitle()) ?><span id="react-app-h1-sub"></span></h1>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div id="profile-tab"></div>
+    <div<?php if($block->getBox()): ?> class="module-box"<?php endif; ?>>
+        <div id="react-snack-root"></div>
+        <div id="react-app-root">
+            <div class="loader loading">
+                <div class="spinner"></div>
+                <p><?= Extensions\Escape::html(__('Loading content')); ?></p>
+            </div>
+        </div>
+        <div id="react-language-footer"></div>
+        <script type="application/javascript">
+            var _bg_client_config = {
+                url: {
+                    authenticationService : '<?= $block->getUrl('*/index/ajax') ?>?isAjax=true'
+                },
+                actions: {
+                    authenticate: function () {
+                        return {
+                            data: {
+                                action: "authenticate",
+                                form_key: "<?= $block->getFormKey(); ?>",
+                                data: {}
+                            }
+                        }
+                    }
+                }
+            };
+        </script>
+        <script src="<?= Extensions\Escape::url($module->getUrl('/'.(defined('BULKGATE_DEV_MODE') ? 'dev' : 'dist').'/widget-api/widget-api.js')); ?>"></script>
+        <script type="application/javascript">
+            _bg_client.registerMiddleware(function (data)
+            {
+                if(data.init._generic)
+                {
+                    data.init.env.homepage.logo_link = "<?= Extensions\Escape::url($module->getUrl('/images/products/ms.png')); ?>";
+                    data.init._generic.scope.module_info = <?= Extensions\Escape::js($module->info()); ?>;
+                }
+            });
 
-			var input = _bg_client.parseQuery(location.search);
+            var input = _bg_client.parseQuery(location.search);
 
-			_bg_client.require(<?php echo Extensions\Escape::js($settings->load('static:application_id', '')); ?>, {
-				product: 'ms',
-				language: <?php echo Extensions\Escape::js($settings->load('main:language', 'en')); ?>,
-				salt: "<?php echo Extensions\Compress::compress($block->getSalt()); ?>",
-				view : {
-					presenter: <?php echo Extensions\Escape::js($block->getPresenter()) ?>,
-					action: <?php echo Extensions\Escape::js($block->getAction()) ?>,
-				},
-				params: {
-					id: <?php if(isset($params['id'])): echo Extensions\Escape::js($params['id']); else: ?>input["id"]<?php  endif; ?>,
-					key: <?php if(isset($params['key'])): echo Extensions\Escape::js($params['key']); else: ?>input["key"]<?php  endif; ?>,
-					type: <?php if(isset($params['type'])): echo Extensions\Escape::js($params['type']); else: ?>input["type"]<?php  endif; ?>,
-					profile_id: <?php if(isset($params['profile_id'])): echo Extensions\Escape::js($params['profile_id']); else: ?>input["profile_id"]<?php  endif; ?>
-				},
-				proxy: <?php echo Extensions\Escape::js($block->getProxyLinks()); ?>
-			});
-		</script>
-	</div>
+            _bg_client.require(<?= Extensions\Escape::js($settings->load('static:application_id', '')); ?>, {
+                product: 'ms',
+                language: <?= Extensions\Escape::js($settings->load('main:language', 'en')); ?>,
+                salt: "<?= Extensions\Compress::compress($block->getSalt()); ?>",
+                view : {
+                    presenter: <?= Extensions\Escape::js($block->getPresenter()) ?>,
+                    action: <?= Extensions\Escape::js($block->getAction()) ?>,
+                },
+                params: {
+                    id: <?php if(isset($params['id'])): echo Extensions\Escape::js($params['id']); else: ?>input["id"]<?php  endif; ?>,
+                    key: <?php if(isset($params['key'])): echo Extensions\Escape::js($params['key']); else: ?>input["key"]<?php  endif; ?>,
+                    type: <?php if(isset($params['type'])): echo Extensions\Escape::js($params['type']); else: ?>input["type"]<?php  endif; ?>,
+                    profile_id: <?php if(isset($params['profile_id'])): echo Extensions\Escape::js($params['profile_id']); else: ?>input["profile_id"]<?php  endif; ?>
+                },
+                proxy: <?= Extensions\Escape::js($block->getProxyLinks()); ?>
+            });
+        </script>
+    </div>
 </div>
