--- a/view/adminhtml/templates/layout.phtml
+++ b/view/adminhtml/templates/layout.phtml
@@ -49,7 +49,7 @@ $params = $block->getParams();
                         return {
                             data: {
                                 action: "authenticate",
-                                form_key: "<?= Extensions\Escape::js($block->getFormKey()); ?>",
+                                form_key: <?= Extensions\Escape::js($block->getFormKey()); ?>,
                                 data: {}
                             }
                         }
